--- a/pulsar/spa-ui-develop.properties
+++ b/pulsar/spa-ui-develop.properties
@@ -3,5 +3,6 @@ modules=core/4.0.2/pulsar-modules-4.0.2.pulsar
 apps=core/4.0.2/pulsar-apps-4.0.2.pulsar
 endorsed=core/4.0.0/pulsar-endorsed-4.0.0.pulsar
 docs=core/4.0.2/Pulsar 4.0.2 Documentation.pdf
+javadoc=core/4.0.2/pulsar-javadoc.zip
 spaui=spa-ui/develop/spa-ui-1.0.3.395.170303-1519-develop.pulsar
 spaui-endorsed=spa-ui/develop/spa-ui-endorsed-1.1.0.395.170303-1519-develop.pulsar
