--- a/scripts/ant/get-pulsar.properties
+++ b/scripts/ant/get-pulsar.properties
@@ -1,5 +1,5 @@
-# Project base directory relative to this file
-base.dir=../../../
+# Project base directory relative to this property file
+base.dir=../../
 
 # Repository to use for downloads
 repositoryURL=https://raw.githubusercontent.com/DSE-AB/artifacts/master/pulsar
@@ -12,8 +12,8 @@ package=spa-ui
 # Target version of package to install/upgrade
 version=develop
 
-# Target directory for the Pulsar installation.
-pulsar.dir=tmp
+# Target directory for the Pulsar installation, relative to the 'base.dir'
+pulsar.dir=pulsar-tmp
 
-# Target directory for developer libraries and JavaDoc
-devlib.dir=tmp/devlib
+# Target directory for developer libraries and JavaDoc, relative to the 'base.dir'
+devlib.dir=pulsar-tmp/dev-lib
