--- a/scripts/ant/get-pulsar.properties
+++ b/scripts/ant/get-pulsar.properties
@@ -1,5 +1,5 @@
 # Project base directory relative to this property file
-base.dir=../../
+base.dir=../
 
 # Repository to use for downloads
 repositoryURL=https://raw.githubusercontent.com/DSE-AB/artifacts/master/pulsar
@@ -7,13 +7,17 @@ repositoryURL=https://raw.githubusercontent.com/DSE-AB/artifacts/master/pulsar
 # Package, allowed values are:
 #   'pulsar'    Pulsar Core.
 #   'spa-ui'    Pulsar Core + SPA-UI.
-package=spa-ui
+package=pulsar
 
 # Target version of package to install/upgrade
 version=develop
 
 # Target directory for the Pulsar installation, relative to the 'base.dir'
+# NOTE: The script get-pulsar.xml will create this directory if it doesn't exist.
+#       Pulsar related files and directories will be created and deleted within this directory.
 pulsar.dir=pulsar-tmp
 
 # Target directory for developer libraries and JavaDoc, relative to the 'base.dir'
-devlib.dir=pulsar-tmp/dev-lib
+# NOTE: The script get-pulsar.xml will create this directory if it doesn't exist.
+#       Pulsar related files and directories will be created and deleted within this directory.
+devlib.dir=pulsar-tmp/lib-dev
