--- a/scripts/ant/pulsar-update.properties
+++ b/scripts/ant/pulsar-update.properties
@@ -7,17 +7,19 @@ repositoryURL=https://raw.githubusercontent.com/DSE-AB/artifacts/master/pulsar
 # Package, allowed values are:
 #   'pulsar'    Pulsar Core.
 #   'spa-ui'    Pulsar Core + SPA-UI.
-package=pulsar
+package=spa-ui
 
 # Target version of package to install/upgrade
-version=develop
+version=1.0.3
 
 # Target directory for the Pulsar installation, relative to the 'base.dir'
 # NOTE: The script get-pulsar.xml will create this directory if it doesn't exist.
 #       Pulsar related files and directories will be created and deleted within this directory.
-pulsar.dir=pulsar-tmp
+# pulsar.dir=pulsar
+# TODO: Uncomment line above and configure value when installing this script
 
 # Target directory for developer libraries and JavaDoc, relative to the 'base.dir'
 # NOTE: The script get-pulsar.xml will create this directory if it doesn't exist.
 #       Pulsar related files and directories will be created and deleted within this directory.
-devlib.dir=pulsar-tmp/lib-dev
+# devlib.dir=pulsar/lib-dev
+# TODO: Uncomment line above and configure value when installing this script
