--- a/pulsar/spa-ui-1.0.4.properties
+++ b/pulsar/spa-ui-1.0.4.properties
@@ -6,5 +6,5 @@ endorsed=core/4.0.0/pulsar-endorsed-4.0.0.pulsar
 docs=core/4.0.2/Pulsar 4.0.2 Documentation.pdf
 javadoc=core/4.0.2/pulsar-javadoc.zip
 # Pulsar SPA-UI 1.0.4
-# spaui=spa-ui/1.0.4/spa-ui-1.0.4.pulsar
-# spaui-endorsed=spa-ui/1.0.4/spa-ui-endorsed-1.1.0.pulsar
+spaui=spa-ui/1.0.4/spa-ui-1.0.4.pulsar
+spaui-endorsed=spa-ui/1.0.4/spa-ui-endorsed-1.1.0.pulsar
