--- a/pulsar/spa-ui-1.0.5-develop.properties
+++ b/pulsar/spa-ui-1.0.5-develop.properties
@@ -5,6 +5,6 @@ apps=core/4.0.2/pulsar-apps-4.0.2.pulsar
 endorsed=core/4.0.0/pulsar-endorsed-4.0.0.pulsar
 docs=core/4.0.2/Pulsar 4.0.2 Documentation.pdf
 javadoc=core/4.0.2/pulsar-javadoc.zip
-# Pulsar SPA-UI 1.0.5-develop
-spaui=spa-ui/1.0.5-develop/spa-ui-1.0.5.427.170403-1325-develop.pulsar
-spaui-endorsed=spa-ui/1.0.4/spa-ui-endorsed-1.1.0.pulsar
+# Pulsar SPA-UI 1.0.5-develop TODO: Replace with "debug" build.
+# spaui=spa-ui/1.0.5-develop/spa-ui-1.0.5.427.170403-1325-develop.pulsar
+# spaui-endorsed=spa-ui/1.0.4/spa-ui-endorsed-1.1.0.pulsar
