--- a/scripts/ant/pulsar-update.properties
+++ b/scripts/ant/pulsar-update.properties
@@ -2,7 +2,7 @@
 base.dir=../
 
 # Repository to use for downloads
-repositoryURL=https://raw.githubusercontent.com/DSE-AB/artifacts/master/pulsar
+repositoryURL=https://github.com/DSE-AB/artifacts/raw/master/pulsar
 
 # Package, allowed values are:
 #   'pulsar'    Pulsar Core.
