--- a/pulsar/spa-ui-1.0.10.1-RC.properties
+++ b/pulsar/spa-ui-1.0.10.1-RC.properties
@@ -1,4 +1,4 @@
-# Pulsar Core 4.0.4
+# Pulsar Core 4.1.0.1-RC
 launcher=core/4.1.0.1-RC/pulsar.launcher-3.8.1.jar
 modules=core/4.1.0.1-RC/pulsar-modules-4.1.0.1.170622-0308-rc.pulsar
 apps=core/4.1.0.1-RC/pulsar-apps-4.1.0.1.170622-0309-rc.pulsar
