--- a/pulsar/pulsar-4.1.0.properties
+++ b/pulsar/pulsar-4.1.0.properties
@@ -2,5 +2,5 @@ launcher=core/4.1.0/pulsar.launcher-3.8.1.jar
 modules=core/4.1.0/pulsar-modules-4.1.0.pulsar
 apps=core/4.1.0/pulsar-apps-4.1.0.pulsar
 endorsed=core/4.1.0/pulsar-endorsed-4.1.0.pulsar
-docs=core/4.1.0/Pulsar Core - Release 4.1.0.pdf
+docs=core/4.1.0/Pulsar 4.1.0 Documentation.pdf
 javadoc=core/4.0.2/pulsar-javadoc.zip
