--- a/pulsar/spa-ui-2.0.0-4.3.2-develop.properties
+++ b/pulsar/spa-ui-2.0.0-4.3.2-develop.properties
@@ -6,5 +6,5 @@ endorsed=core/4.3.0/pulsar-endorsed-4.3.0.pulsar
 docs=core/4.3.2/Pulsar 4.3.2 Documentation.pdf
 
 # Pulsar SPA-UI 2.0.0 develop
-spaui=spa-ui/2.0.0-develop/spa-ui-2.0.0.9.180110-1553-develop-2_0.pulsar
-spaui-endorsed=spa-ui/2.0.0-develop/spa-ui-endorsed-2.0.0.9.180110-1553-develop-2_0.pulsar
+spaui=spa-ui/2.0.0-develop/spa-ui-endorsed-2.0.0.18.180123-0828-develop-2_0.pulsar
+spaui-endorsed=spa-ui/2.0.0-develop/spa-ui-endorsed-2.0.0.18.180123-0828-develop-2_0.pulsar
