Change 2.0.0-latest and 2.0.0-develop to 2.0.0.24

--- a/pulsar/spa-ui-2.0.0-4.3.2-latest.properties
+++ b/pulsar/spa-ui-2.0.0-4.3.2-latest.properties
@@ -6,5 +6,5 @@ endorsed=core/4.3.0/pulsar-endorsed-4.3.0.pulsar
 docs=core/4.3.2/Pulsar 4.3.2 Documentation.pdf
 
 # Pulsar SPA-UI 2.0.0 latest. This file will be updated frequently
-spaui=spa-ui/2.0.0-develop/spa-ui-2.0.0.19.180126-0913-develop-2_0.pulsar
-spaui-endorsed=spa-ui/2.0.0-develop/spa-ui-endorsed-2.0.0.19.180126-0913-develop-2_0.pulsar
+spaui=spa-ui/2.0.0-latest/spa-ui-2.0.0.24.180212-1229-develop-2_0.pulsar
+spaui-endorsed=spa-ui/2.0.0-latest/spa-ui-endorsed-2.0.0.24.180212-1229-develop-2_0.pulsar
