--- a/pulsar/spa-ui-latest-4.3.2.properties
+++ b/pulsar/spa-ui-latest-4.3.2.properties
@@ -6,5 +6,5 @@ endorsed=core/4.3.0/pulsar-endorsed-4.3.0.pulsar
 docs=core/4.3.2/Pulsar 4.3.2 Documentation.pdf
 
 # Pulsar SPA-UI latest. This file will be updated frequently
-spaui=spa-ui/2.0.1/spa-ui-2.0.1.pulsar
-spaui-endorsed=spa-ui/2.0.1/spa-ui-endorsed-2.0.1.pulsar
+spaui=spa-ui/latest/spa-ui-2.0.1.520.180406-0744-develop.pulsar
+spaui-endorsed=spa-ui/latest/spa-ui-endorsed-2.0.1.520.180406-0745-develop.pulsar
