--- a/pulsar/spa-ui-latest-4.4.0.properties
+++ b/pulsar/spa-ui-latest-4.4.0.properties
@@ -6,5 +6,5 @@ endorsed=core/4.4.0/pulsar-endorsed-4.4.0.pulsar
 docs=core/4.4.0/Pulsar 4.4.0 Documentation.pdf
 
 # Pulsar SPA-UI latest (may be updated to latest version at any time)
-spaui=spa-ui/snapshots/2.0.2.547.180521-0844/spa-ui-2.0.2.547.180521-0844-develop.pulsar
-spaui-endorsed=spa-ui/snapshots/2.0.2.547.180521-0844/spa-ui-endorsed-2.0.2.547.180521-0844-develop.pulsar
+spaui=spa-ui/2.0.3/spa-ui-2.0.3.pulsar
+spaui-endorsed=spa-ui/2.0.3/spa-ui-endorsed-2.0.3.pulsar
