--- a/pulsar/spa-ui-latest-4.5.0.properties
+++ b/pulsar/spa-ui-latest-4.5.0.properties
@@ -6,5 +6,5 @@ endorsed=core/4.5.0/pulsar-endorsed-4.5.0.pulsar
 docs=core/4.5.0/Pulsar 4.5.0 Documentation.pdf
 
 # Pulsar SPA-UI latest (may be updated to latest version at any time)
-spaui=spa-ui/2.0.6/spa-ui-2.0.6.pulsar
-spaui-endorsed=spa-ui/2.0.6/spa-ui-endorsed-2.0.6.pulsar
+spaui=spa-ui/latest/spa-ui-2.0.6.572.180816-2059-develop.pulsar
+spaui-endorsed=spa-ui/latest/spa-ui-endorsed-2.0.6.572.180816-2059-develop.pulsar
