--- a/pulsar/spa-ui-latest-4.5.1.properties
+++ b/pulsar/spa-ui-latest-4.5.1.properties
@@ -6,5 +6,5 @@ endorsed=core/4.5.0/pulsar-endorsed-4.5.0.pulsar
 docs=core/4.5.1/Pulsar 4.5.1 Documentation.pdf
 
 # Pulsar SPA-UI latest (may be updated to latest version at any time)
-spaui=spa-ui/latest/spa-ui-2.0.8.582.180914-0918-develop.pulsar
-spaui-endorsed=spa-ui/latest/spa-ui-endorsed-2.0.8.582.180914-0918-develop.pulsar
+spaui=spa-ui/2.1.0/spa-ui-2.1.0.pulsar
+spaui-endorsed=spa-ui/2.1.0/spa-ui-endorsed-2.1.0.pulsar
