--- a/pulsar/spa-ui-latest2-4.6.3.properties
+++ b/pulsar/spa-ui-latest2-4.6.3.properties
@@ -6,5 +6,5 @@ endorsed=core/4.6.0/pulsar-endorsed-4.6.0.pulsar
 docs=core/4.6.3/Pulsar 4.6.3 Documentation.pdf
 
 # Pulsar SPA-UI latest (may be updated to latest version at any time)
-spaui=spa-ui/latest/spa-ui-2.4.0.1.191210-1504-PR1036.pulsar
-spaui-endorsed=spa-ui/latest/spa-ui-endorsed-2.4.0.1.191210-1504-PR1036.pulsar
+spaui=spa-ui/latest/spa-ui-2.4.0.68.191213-0856-develop.pulsar
+spaui-endorsed=spa-ui/latest/spa-ui-endorsed-2.4.0.68.191213-0856-develop.pulsar
