--- a/pulsar/pulsar-4.0.3.properties
+++ b/pulsar/pulsar-4.0.3.properties
@@ -1,4 +1,4 @@
-launcher=core/4.0.3.3-RC/pulsar.launcher-3.7.0.jar
+launcher=core/4.0.3/pulsar.launcher-3.7.0.jar
 modules=core/4.0.3/pulsar-modules-4.0.3.pulsar
 apps=core/4.0.2/pulsar-apps-4.0.2.pulsar
 endorsed=core/4.0.3/pulsar-endorsed-4.0.3.pulsar
