--- a/pulsar/spa-ui-1.0.7.properties
+++ b/pulsar/spa-ui-1.0.7.properties
@@ -1,5 +1,5 @@
 # Pulsar Core 4.0.3
-launcher=core/4.0.3.3-RC/pulsar.launcher-3.7.0.jar
+launcher=core/4.0.3/pulsar.launcher-3.7.0.jar
 modules=core/4.0.3/pulsar-modules-4.0.3.pulsar
 apps=core/4.0.2/pulsar-apps-4.0.2.pulsar
 endorsed=core/4.0.3/pulsar-endorsed-4.0.3.pulsar
