--- a/pulsar/spa-ui-latest-latest.properties
+++ b/pulsar/spa-ui-latest-latest.properties
@@ -1,7 +1,7 @@
 # Pulsar latest (may be updated to latest version at any time)
-launcher=core/4.7.0-RC/pulsar.launcher-4.2.3.jar
-modules=core/4.7.0-RC/pulsar-modules-4.7.0.3-RC.pulsar
-apps=core/4.7.0-RC/pulsar-apps-4.7.0.3-RC.pulsar
+launcher=core/4.7.0/pulsar.launcher-4.2.3.jar
+modules=core/4.7.0/pulsar-modules-4.7.0.pulsar
+apps=core/4.7.0/pulsar-apps-4.7.0.pulsar
 endorsed=core/4.7.0/pulsar-endorsed-4.7.0.pulsar
 docs=core/4.7.0/Pulsar 4.7.0 Documentation.pdf
 
