--- a/pulsar/pulsar-latest.properties
+++ b/pulsar/pulsar-latest.properties
@@ -1,6 +1,6 @@
 # Pulsar latest (may be updated to latest version at any time)
 launcher=core/4.7.0/pulsar.launcher-4.2.3.jar
-modules=core/4.7.1/pulsar-modules-4.7.1.pulsar
-apps=core/4.7.1/pulsar-apps-4.7.1.pulsar
+modules=core/latest/pulsar-modules-4.7.1.30.200402-0711-develop.pulsar
+apps=core/latest/pulsar-apps-4.7.1.30.200402-0712-develop.pulsar
 endorsed=core/4.7.0/pulsar-endorsed-4.7.0.pulsar
 docs=core/4.7.1/Pulsar 4.7.1 Documentation.pdf
