--- a/pulsar/spa-ui-latest-latest.properties
+++ b/pulsar/spa-ui-latest-latest.properties
@@ -1,10 +1,10 @@
 # Pulsar latest (may be updated to latest version at any time)
 launcher=core/4.7.0/pulsar.launcher-4.2.3.jar
-modules=core/latest/pulsar-modules-4.7.2.32.200505-0835-develop.pulsar
-apps=core/latest/pulsar-apps-4.7.2.32.200505-0835-develop.pulsar
+modules=core/4.7.2/pulsar-modules-4.7.2.pulsar
+apps=core/4.7.2/pulsar-apps-4.7.2.pulsar
 endorsed=core/4.7.0/pulsar-endorsed-4.7.0.pulsar
-docs=core/4.7.1/Pulsar 4.7.1 Documentation.pdf
+docs=core/4.7.2/Pulsar 4.7.2 Documentation.pdf
 
 # Pulsar SPA-UI latest (may be updated to latest version at any time)
-spaui=spa-ui/latest/spa-ui-2.5.0.80.200505-0904-develop.pulsar
-spaui-endorsed=spa-ui/latest/spa-ui-endorsed-2.5.0.80.200505-0904-develop.pulsar
+spaui=spa-ui/2.5.1/spa-ui-2.5.1.pulsar
+spaui-endorsed=spa-ui/2.5.1/spa-ui-endorsed-2.5.1.pulsar
