--- a/pulsar/spa-ui-latest-4.7.2.properties
+++ b/pulsar/spa-ui-latest-4.7.2.properties
@@ -6,5 +6,5 @@ endorsed=core/4.7.0/pulsar-endorsed-4.7.0.pulsar
 docs=core/4.7.2/Pulsar 4.7.2 Documentation.pdf
 
 # Pulsar SPA-UI latest (may be updated to latest version at any time)
-spaui=spa-ui/latest/spa-ui-2.5.2.83.200604-1152-develop.pulsar
-spaui-endorsed=spa-ui/latest/spa-ui-endorsed-2.5.2.83.200604-1152-develop.pulsar
+spaui=spa-ui/2.5.2/spa-ui-2.5.2.pulsar
+spaui-endorsed=spa-ui/2.5.2/spa-ui-endorsed-2.5.2.pulsar
