--- a/pulsar/spa-ui-2.5.2-latest.properties
+++ b/pulsar/spa-ui-2.5.2-latest.properties
@@ -1,7 +1,7 @@
 # Pulsar latest (may be updated to latest version at any time)
-launcher=core/4.7.0/pulsar.launcher-4.2.3.jar
-modules=core/latest/pulsar-modules-4.7.2.38.201006-1405-develop.pulsar
-apps=core/latest/pulsar-apps-4.7.2.38.201006-1405-develop.pulsar
+launcher=core/latest/pulsar.launcher-4.2.4.jar
+modules=core/latest/pulsar-modules-4.7.2.47.201024-0932-develop.pulsar
+apps=core/latest/pulsar-apps-4.7.2.47.201024-0932-develop.pulsar
 endorsed=core/4.7.0/pulsar-endorsed-4.7.0.pulsar
 docs=core/4.7.2/Pulsar 4.7.2 Documentation.pdf
 
