--- a/pulsar/pulsar-latest.properties
+++ b/pulsar/pulsar-latest.properties
@@ -1,6 +1,6 @@
 # Pulsar latest (may be updated to latest version at any time)
-launcher=core/4.7.0/pulsar.launcher-4.2.3.jar
-modules=core/4.7.2/pulsar-modules-4.7.2.pulsar
-apps=core/4.7.2/pulsar-apps-4.7.2.pulsar
+launcher=core/latest/pulsar.launcher-4.2.5.jar
+modules=core/latest/pulsar-modules-4.7.3.49.201029-1420-develop.pulsar
+apps=core/latest/pulsar-apps-4.7.3.49.201029-1420-develop.pulsar
 endorsed=core/4.7.0/pulsar-endorsed-4.7.0.pulsar
 docs=core/4.7.2/Pulsar 4.7.2 Documentation.pdf
