--- a/pulsar/spa-ui-latest-latest.properties
+++ b/pulsar/spa-ui-latest-latest.properties
@@ -7,4 +7,4 @@ docs=core/4.7.2/Pulsar 4.7.2 Documentation.pdf
 
 # Pulsar SPA-UI latest (may be updated to latest version at any time)
 spaui=spa-ui/latest/spa-ui-2.5.2.84.201023-1142-develop.pulsar
-spaui-endorsed=spa-ui/2.5.2/spa-ui-endorsed-2.5.2.84.201023-1142-develop.pulsar
+spaui-endorsed=spa-ui/latest/spa-ui-endorsed-2.5.2.84.201023-1142-develop.pulsar
