--- a/pulsar/spa-ui-2.5.2-latest.properties
+++ b/pulsar/spa-ui-2.5.2-latest.properties
@@ -1,9 +1,9 @@
 # Pulsar latest (may be updated to latest version at any time)
-launcher=core/latest/pulsar.launcher-4.2.5.jar
-modules=core/latest/pulsar-modules-4.7.3.49.201029-1420-develop.pulsar
-apps=core/latest/pulsar-apps-4.7.3.49.201029-1420-develop.pulsar
+launcher=core/4.7.3/pulsar.launcher-4.2.5.jar
+modules=core/4.7.3/pulsar-modules-4.7.3.pulsar
+apps=core/4.7.3/pulsar-apps-4.7.3.pulsar
 endorsed=core/4.7.0/pulsar-endorsed-4.7.0.pulsar
-docs=core/4.7.2/Pulsar 4.7.2 Documentation.pdf
+docs=core/4.7.3/Pulsar 4.7.3 Documentation.pdf
 
 # Pulsar SPA-UI 2.5.2
 spaui=spa-ui/2.5.2/spa-ui-2.5.2.pulsar
