--- a/pulsar/pulsar-latest.properties
+++ b/pulsar/pulsar-latest.properties
@@ -1,6 +1,6 @@
 # Pulsar latest (may be updated to latest version at any time)
-launcher=core/latest/pulsar.launcher-4.2.5.jar
-modules=core/latest/pulsar-modules-4.8.0.54.201216-0922-develop.pulsar
-apps=core/latest/pulsar-apps-4.8.0.54.201216-0922-develop.pulsar
-endorsed=core/4.7.0/pulsar-endorsed-4.7.0.pulsar
-docs=core/4.7.2/Pulsar 4.7.2 Documentation.pdf
+launcher=core/4.7.3/pulsar.launcher-4.2.5.jar
+modules=core/4.8.0/pulsar-modules-4.8.0.pulsar
+apps=core/4.8.0/pulsar-apps-4.8.0.pulsar
+endorsed=core/4.8.0/pulsar-endorsed-4.8.0.pulsar
+docs=core/4.8.0/Pulsar 4.8.0 Documentation.pdf
