Pulsar SPA-UI 2.5.4

--- a/pulsar/spa-ui-latest-4.7.3.properties
+++ b/pulsar/spa-ui-latest-4.7.3.properties
@@ -6,5 +6,5 @@ endorsed=core/4.7.0/pulsar-endorsed-4.7.0.pulsar
 docs=core/4.7.3/Pulsar 4.7.3 Documentation.pdf
 
 # Pulsar SPA-UI latest (may be updated to latest version at any time)
-spaui=spa-ui/latest/spa-ui-2.5.4.87.201207-1021-develop.pulsar
-spaui-endorsed=spa-ui/latest/spa-ui-endorsed-2.5.4.87.201207-1021-develop.pulsar
+spaui=spa-ui/2.5.4/spa-ui-2.5.4.pulsar
+spaui-endorsed=spa-ui/2.5.4/spa-ui-endorsed-2.5.4.pulsar
