Pulsar Core 4.8.1 Release Candidate

--- a/pulsar/spa-ui-2.5.4-4.8.1-RC.properties
+++ b/pulsar/spa-ui-2.5.4-4.8.1-RC.properties
@@ -1,7 +1,7 @@
 # Pulsar Core 4.8.0
 launcher=core/4.7.3/pulsar.launcher-4.2.5.jar
-modules=core/4.8.1-RC/pulsar-modules-4.8.1-RC.pulsar
-apps=core/4.8.1-RC/pulsar-apps-4.8.1-RC.pulsar
+modules=core/4.8.1-RC/pulsar-modules-4.8.1-RC2.pulsar
+apps=core/4.8.1-RC/pulsar-apps-4.8.1-RC2.pulsar
 endorsed=core/4.8.0/pulsar-endorsed-4.8.0.pulsar
 docs=core/4.8.0/Pulsar 4.8.0 Documentation.pdf
 
