--- a/pulsar/spa-ui-latest-4.8.0.properties
+++ b/pulsar/spa-ui-latest-4.8.0.properties
@@ -1,4 +1,4 @@
-# Pulsar latest (may be updated to latest version at any time)
+# Pulsar Core 4.8.0
 launcher=core/4.7.3/pulsar.launcher-4.2.5.jar
 modules=core/4.8.0/pulsar-modules-4.8.0.pulsar
 apps=core/4.8.0/pulsar-apps-4.8.0.pulsar
