--- a/pulsar/spa-ui-latest-latest.properties
+++ b/pulsar/spa-ui-latest-latest.properties
@@ -1,10 +1,10 @@
 # Pulsar latest (may be updated to latest version at any time)
-launcher=core/4.9.0/pulsar.launcher-4.2.6.jar
-modules=core/4.9.0/pulsar-modules-4.9.0.pulsar
-apps=core/4.9.0/pulsar-apps-4.9.0.pulsar
-endorsed=core/4.9.0/pulsar-endorsed-4.9.0.pulsar
-docs=core/4.9.0/Pulsar 4.9.0 Documentation.pdf
+launcher=core/4.10.0/pulsar.launcher-4.2.6.jar
+modules=core/4.10.0/pulsar-modules-4.10.0.pulsar
+apps=core/4.10.0/pulsar-apps-4.10.0.pulsar
+endorsed=core/4.10.0/pulsar-endorsed-4.10.0.pulsar
+docs=core/4.10.0/Pulsar 4.10.0 Documentation.pdf
 
 # Pulsar SPA-UI latest (may be updated to latest version at any time)
-spaui=spa-ui/latest/spa-ui-2.6.1.97.210427-0823-develop.pulsar
-spaui-endorsed=spa-ui/latest/spa-ui-endorsed-2.6.1.97.210427-0823-develop.pulsar
+spaui=spa-ui/2.6.2/spa-ui-2.6.2.pulsar
+spaui-endorsed=spa-ui/2.6.2/spa-ui-endorsed-2.6.2.pulsar
