Updated Latest Pulsar SPA-UI, build #103

--- a/pulsar/spa-ui-latest-4.10.0.properties
+++ b/pulsar/spa-ui-latest-4.10.0.properties
@@ -6,5 +6,5 @@ endorsed=core/4.10.0/pulsar-endorsed-4.10.0.pulsar
 docs=core/4.10.0/Pulsar 4.10.0 Documentation.pdf
 
 # Pulsar SPA-UI latest (may be updated to latest version at any time)
-spaui=spa-ui/2.6.3/spa-ui-2.6.3.pulsar
-spaui-endorsed=spa-ui/2.6.3/spa-ui-endorsed-2.6.3.pulsar
+spaui=spa-ui/latest/spa-ui-2.6.3.103.210602-1420-develop.pulsar
+spaui-endorsed=spa-ui/latest/spa-ui-endorsed-2.6.3.103.210602-1420-develop.pulsar
