Pulsar SPA-UI 2.7.0

--- a/pulsar/spa-ui-tfa-4.10.0.properties
+++ b/pulsar/spa-ui-tfa-4.10.0.properties
@@ -5,6 +5,6 @@ apps=core/4.10.0/pulsar-apps-4.10.0.pulsar
 endorsed=core/4.10.0/pulsar-endorsed-4.10.0.pulsar
 docs=core/4.10.0/Pulsar 4.10.0 Documentation.pdf
 
-# Pulsar SPA-UI feature-tfa
-spaui=spa-ui/tfa/spa-ui-2.7.0.13.210909-2057-feature-tfa-login.pulsar
-spaui-endorsed=spa-ui/tfa/spa-ui-endorsed-2.7.0.13.210909-2057-feature-tfa-login.pulsar
+# Pulsar SPA-UI feature-tfa (2.7.0)
+spaui=spa-ui/2.7.0/spa-ui-2.7.0.pulsar
+spaui-endorsed=spa-ui/2.7.0/spa-ui-endorsed-2.7.0.pulsar
