--- a/pulsar/spa-ui-latest-latest.properties
+++ b/pulsar/spa-ui-latest-latest.properties
@@ -1,10 +1,10 @@
 # Pulsar latest (may be updated to latest version at any time)
-launcher=core/4.10.0/pulsar.launcher-4.2.6.jar
-modules=core/4.11.1/pulsar-modules-4.11.1.pulsar
-apps=core/4.11.1/pulsar-apps-4.11.1.pulsar
+launcher=core/4.12.0/pulsar.launcher-4.2.7.jar
+modules=core/4.12.0/pulsar-modules-4.12.0.2-RC.pulsar
+apps=core/4.11.1/pulsar-apps-4.12.0.2-RC.pulsar
 endorsed=core/4.11.0/pulsar-endorsed-4.11.0.pulsar
 docs=core/4.11.1/Pulsar 4.11.1 Documentation.pdf
 
 # Pulsar SPA-UI latest (may be updated to latest version at any time)
-spaui=spa-ui/2.7.1/spa-ui-2.7.1.pulsar
-spaui-endorsed=spa-ui/2.7.1/spa-ui-endorsed-2.7.1.pulsar
+spaui=spa-ui/2.8.0/spa-ui-2.8.0.5-RC.pulsar
+spaui-endorsed=spa-ui/2.8.0/spa-ui-endorsed-2.8.0.5-RC.pulsar
