--- a/pulsar/pulsar-4.12.0.properties
+++ b/pulsar/pulsar-4.12.0.properties
@@ -1,4 +1,4 @@
-# Pulsar latest (may be updated to latest version at any time)
+# Pulsar Core 4.12.0
 launcher=core/4.12.0/pulsar.launcher-4.2.7.jar
 modules=core/4.12.0/pulsar-modules-4.12.0.pulsar
 apps=core/4.12.0/pulsar-apps-4.12.0.pulsar
