--- a/pulsar/spa-ui-latest-latest.properties
+++ b/pulsar/spa-ui-latest-latest.properties
@@ -6,5 +6,5 @@ endorsed=core/4.12.0/pulsar-endorsed-4.12.0.pulsar
 docs=core/4.12.0/Pulsar 4.12.0 Documentation.pdf
 
 # Pulsar SPA-UI latest (may be updated to latest version at any time)
-spaui=spa-ui/2.9.0/spa-ui-2.9.0.5-RC.pulsar
-spaui-endorsed=spa-ui/2.9.0/spa-ui-endorsed-2.9.0.5-RC.pulsar
+spaui=spa-ui/2.9.0/spa-ui-2.9.0.pulsar
+spaui-endorsed=spa-ui/2.9.0/spa-ui-endorsed-2.9.0.pulsar
