--- a/pulsar/spa-ui-2.10.0-test-4.12.0.properties
+++ b/pulsar/spa-ui-2.10.0-test-4.12.0.properties
@@ -6,5 +6,5 @@ endorsed=core/4.12.0/pulsar-endorsed-4.12.0.pulsar
 docs=core/4.12.0/Pulsar 4.12.0 Documentation.pdf
 
 # Pulsar SPA-UI 2.10.0 Test version
-spaui=spa-ui/2.10.0/spa-ui-2.9.1.221202-2157-pruzze.pulsar
-spaui-endorsed=spa-ui/2.10.0/spa-ui-endorsed-2.9.0.221202-2157-pruzze.pulsar
+spaui=spa-ui/2.10.0/spa-ui-2.10.0.5-RC.pulsar
+spaui-endorsed=spa-ui/2.10.0/spa-ui-endorsed-2.10.0.5-RC.pulsar
