--- a/pulsar/spa-ui-2.10.0-test-latest.properties
+++ b/pulsar/spa-ui-2.10.0-test-latest.properties
@@ -1,10 +1,10 @@
-# Pulsar Core 4.13.0 rc
+# Pulsar Core 4.13.0
 launcher=core/4.12.0/pulsar.launcher-4.2.7.jar
-modules=core/4.13.0/pulsar-modules-4.13.0.1-RC.pulsar
-apps=core/4.13.0/pulsar-apps-4.13.0.1-RC.pulsar
-endorsed=core/4.12.0/pulsar-endorsed-4.12.0.pulsar
-docs=core/4.12.0/Pulsar 4.12.0 Documentation.pdf
+modules=core/4.13.0/pulsar-modules-4.13.0.pulsar
+apps=core/4.13.0/pulsar-apps-4.13.0.pulsar
+endorsed=core/4.13.0/pulsar-endorsed-4.13.0.pulsar
+docs=core/4.13.0/Pulsar 4.13.0 Documentation.pdf
 
 # Pulsar SPA-UI 2.10.0 Test version
-spaui=spa-ui/2.10.0/spa-ui-2.9.1.221202-2157-pruzze.pulsar
-spaui-endorsed=spa-ui/2.10.0/spa-ui-endorsed-2.9.0.221202-2157-pruzze.pulsar
+spaui=spa-ui/2.10.0/spa-ui-2.10.0.5-RC.pulsar
+spaui-endorsed=spa-ui/2.10.0/spa-ui-endorsed-2.10.0.5-RC.pulsar
