--- a/pulsar/spa-ui-latest2-latest.properties
+++ b/pulsar/spa-ui-latest2-latest.properties
@@ -6,5 +6,5 @@ endorsed=core/4.13.0/pulsar-endorsed-4.13.0.pulsar
 docs=core/4.13.0/Pulsar 4.13.0 Documentation.pdf
 
 # Pulsar SPA-UI latest (may be updated to latest version at any time)
-spaui=spa-ui/latest2/spa-ui-2.10.1.40.230308-1604-develop.pulsar
-spaui-endorsed=spa-ui/latest2/spa-ui-endorsed-2.10.0.40.230308-1604-develop.pulsar
+spaui=spa-ui/2.11.0/spa-ui-2.11.0.pulsar
+spaui-endorsed=spa-ui/2.11.0/spa-ui-endorsed-2.11.0.pulsar
