--- a/pulsar/spa-ui-latest-4.13.0.properties
+++ b/pulsar/spa-ui-latest-4.13.0.properties
@@ -6,5 +6,5 @@ endorsed=core/4.13.0/pulsar-endorsed-4.13.0.pulsar
 docs=core/4.13.0/Pulsar 4.13.0 Documentation.pdf
 
 # Pulsar SPA-UI latest (may be updated to latest version at any time)
-spaui=spa-ui/latest/spa-ui-2.11.0.56.230609-0812-develop.pulsar
-spaui-endorsed=spa-ui/latest/spa-ui-endorsed-2.11.0.56.230609-0812-develop.pulsar
+spaui=spa-ui/2.11.1/spa-ui-2.11.1.pulsar
+spaui-endorsed=spa-ui/2.11.1/spa-ui-endorsed-2.11.1.pulsar
