--- a/pulsar/spa-ui-feature-checklista-4.13.0.properties
+++ b/pulsar/spa-ui-feature-checklista-4.13.0.properties
@@ -5,6 +5,6 @@ apps=core/4.13.0/pulsar-apps-4.13.0.pulsar
 endorsed=core/4.13.0/pulsar-endorsed-4.13.0.pulsar
 docs=core/4.13.0/Pulsar 4.13.0 Documentation.pdf
 
-# Pulsar SPA-UI PSPAUI-
-spaui=spa-ui-2.13.0.1.231108-1310-PR1291.pulsar
-spaui-endorsed=spa-ui-endorsed-2.13.0.1.231108-1310-PR1291.pulsar
+# Pulsar SPA-UI PSPAUI-525
+spaui=feature-checklista/spa-ui-2.13.0.1.231108-1310-PR1291.pulsar
+spaui-endorsed=feature-checklista/spa-ui-endorsed-2.13.0.1.231108-1310-PR1291.pulsar
