--- a/pulsar/spa-ui-2.13.1-rc-4.13.0.properties
+++ b/pulsar/spa-ui-2.13.1-rc-4.13.0.properties
@@ -6,5 +6,5 @@ endorsed=core/4.13.0/pulsar-endorsed-4.13.0.pulsar
 docs=core/4.13.0/Pulsar 4.13.0 Documentation.pdf
 
 # Pulsar SPA-UI 2.13.1 RC
-spaui=spa-ui/feature-checklist/spa-ui-2.13.1.3-RC.pulsar
+spaui=spa-ui/2.13.1/spa-ui-2.13.1.3-RC.pulsar
 spaui-endorsed=spa-ui/2.13.0/spa-ui-endorsed-2.13.0.pulsar
