SPA-UI feature-dynamic-link build #8

--- a/pulsar/spa-ui-feature-dynamic-link-4.13.0.properties
+++ b/pulsar/spa-ui-feature-dynamic-link-4.13.0.properties
@@ -5,6 +5,6 @@ apps=core/4.13.0/pulsar-apps-4.13.0.pulsar
 endorsed=core/4.13.0/pulsar-endorsed-4.13.0.pulsar
 docs=core/4.13.0/Pulsar 4.13.0 Documentation.pdf
 
-# Pulsar SPA-UI Feature Gantt Updates
-spaui=spa-ui/feature-dynamic-link/spa-ui-2.13.1.7.240118-0919-feature-dynamic-link.pulsar
-spaui-endorsed=spa-ui/feature-dynamic-link/spa-ui-endorsed-2.13.0.7.240118-0919-feature-dynamic-link.pulsar
+# Pulsar SPA-UI Feature Dynamic Link
+spaui=spa-ui/feature-dynamic-link/spa-ui-2.13.1.8.240124-1323-feature-dynamic-link.pulsar
+spaui-endorsed=spa-ui/feature-dynamic-link/spa-ui-endorsed-2.13.0.8.240124-1323-feature-dynamic-link.pulsar
