--- a/pulsar/spa-ui-latest2-latest.properties
+++ b/pulsar/spa-ui-latest2-latest.properties
@@ -1,10 +1,10 @@
-# Pulsar latest (may be updated to latest version at any time)
+# Pulsar Core 4.14.0-rc
 launcher=core/4.12.0/pulsar.launcher-4.2.7.jar
-modules=core/4.13.0/pulsar-modules-4.13.0.pulsar
-apps=core/4.13.0/pulsar-apps-4.13.0.pulsar
+modules=core/4.14.0/pulsar-modules-4.14.0.3-RC.pulsar
+apps=core/4.14.0/pulsar-apps-4.14.0.3-RC.pulsar
 endorsed=core/4.13.0/pulsar-endorsed-4.13.0.pulsar
 docs=core/4.13.0/Pulsar 4.13.0 Documentation.pdf
 
 # Pulsar SPA-UI latest (may be updated to latest version at any time)
-spaui=spa-ui/2.13.0/spa-ui-2.13.0.pulsar
-spaui-endorsed=spa-ui/2.13.0/spa-ui-endorsed-2.13.0.pulsar
+spaui=spa-ui/latest2/spa-ui-2.14.0.110.240307-1543-develop.pulsar
+spaui-endorsed=spa-ui/latest2/spa-ui-endorsed-2.14.0.110.240307-1543-develop.pulsar
