Core Letest build #24 + SPA-UI Latest build #121

--- a/pulsar/spa-ui-latest2-latest.properties
+++ b/pulsar/spa-ui-latest2-latest.properties
@@ -1,10 +1,10 @@
-# Pulsar Core 4.14.0
+# Pulsar Core latest (may be updated to latest version at any time)
 launcher=core/4.12.0/pulsar.launcher-4.2.7.jar
-modules=core/4.14.0/pulsar-modules-4.14.0.pulsar
-apps=core/4.14.0/pulsar-apps-4.14.0.pulsar
+modules=core/latest/pulsar-modules-4.14.1.24.240522-0829-develop.pulsar
+apps=core/4.14.0/pulsar-apps-4.14.1.24.240522-0829-develop.pulsar
 endorsed=core/4.14.0/pulsar-endorsed-4.14.0.pulsar
 docs=core/4.14.0/Pulsar 4.14.0 Documentation.pdf
 
 # Pulsar SPA-UI latest (may be updated to latest version at any time)
-spaui=spa-ui/2.14.1/spa-ui-2.14.1.pulsar
-spaui-endorsed=spa-ui/2.14.0/spa-ui-endorsed-2.14.0.pulsar
+spaui=spa-ui/latest/spa-ui-2.14.2.121.240522-0856-develop.pulsar
+spaui-endorsed=spa-ui/latest/spa-ui-endorsed-2.14.0.121.240522-0856-develop.pulsar
