--- a/pulsar/pulsar-latest.properties
+++ b/pulsar/pulsar-latest.properties
@@ -1,6 +1,6 @@
-# Pulsar latest (may be updated to latest version at any time)
+# Pulsar Core latest (may be updated to latest version at any time)
 launcher=core/4.12.0/pulsar.launcher-4.2.7.jar
-modules=core/4.14.0/pulsar-modules-4.14.0.3-RC.pulsar
-apps=core/4.14.0/pulsar-apps-4.14.0.3-RC.pulsar
-endorsed=core/4.13.0/pulsar-endorsed-4.13.0.pulsar
-docs=core/4.13.0/Pulsar 4.13.0 Documentation.pdf
+modules=core/latest/pulsar-modules-4.14.1.24.240522-0829-develop.pulsar
+apps=core/4.14.0/pulsar-apps-4.14.1.24.240522-0829-develop.pulsar
+endorsed=core/4.14.0/pulsar-endorsed-4.14.0.pulsar
+docs=core/4.14.0/Pulsar 4.14.0 Documentation.pdf
