--- a/pulsar/spa-ui-latest-latest.properties
+++ b/pulsar/spa-ui-latest-latest.properties
@@ -1,10 +1,10 @@
 # Pulsar Core latest (may be updated to latest version at any time)
 launcher=core/4.12.0/pulsar.launcher-4.2.7.jar
-modules=core/latest/pulsar-modules-4.14.1.24.240522-0829-develop.pulsar
-apps=core/latest/pulsar-apps-4.14.1.24.240522-0829-develop.pulsar
+modules=core/4.14.1/pulsar-modules-4.14.1.pulsar
+apps=core/4.14.1/pulsar-apps-4.14.1.pulsar
 endorsed=core/4.14.0/pulsar-endorsed-4.14.0.pulsar
 docs=core/4.14.0/Pulsar 4.14.0 Documentation.pdf
 
 # Pulsar SPA-UI latest (may be updated to latest version at any time)
-spaui=spa-ui/latest/spa-ui-2.14.2.127.240611-0748-develop.pulsar
-spaui-endorsed=spa-ui/latest/spa-ui-endorsed-2.14.0.125.240531-2041-develop.pulsar
+spaui=spa-ui/2.14.2/spa-ui-2.14.2.pulsar
+spaui-endorsed=spa-ui/2.14.0/spa-ui-endorsed-2.14.0.pulsar
