--- a/pulsar/spa-ui-latest-latest.properties
+++ b/pulsar/spa-ui-latest-latest.properties
@@ -1,6 +1,6 @@
 # Pulsar Core latest (may be updated to latest version at any time)
 launcher=core/4.12.0/pulsar.launcher-4.2.7.jar
-modules=core/4.14.2/pulsar-modules-4.14.2.pulsar
+modules=core/latest/pulsar-modules-4.14.2.27.241023-1023-develop.pulsar
 apps=core/4.14.2/pulsar-apps-4.14.2.pulsar
 endorsed=core/4.14.0/pulsar-endorsed-4.14.0.pulsar
 docs=core/4.14.0/Pulsar 4.14.0 Documentation.pdf
