--- a/pulsar/spa-ui-latest2-latest.properties
+++ b/pulsar/spa-ui-latest2-latest.properties
@@ -1,10 +1,10 @@
 # Pulsar Core latest (may be updated to latest version at any time)
 launcher=core/4.12.0/pulsar.launcher-4.2.7.jar
-modules=core/latest/pulsar-modules-4.14.2.27.241023-1023-develop.pulsar
-apps=core/4.14.2/pulsar-apps-4.14.2.pulsar
+modules=core/4.14.3/pulsar-modules-4.14.3.pulsar
+apps=core/4.14.3/pulsar-apps-4.14.3.pulsar
 endorsed=core/4.14.0/pulsar-endorsed-4.14.0.pulsar
 docs=core/4.14.0/Pulsar 4.14.0 Documentation.pdf
 
 # Pulsar SPA-UI latest2 (may be updated to latest version at any time)
-spaui=spa-ui/2.15.1/spa-ui-2.15.1.pulsar
+spaui=spa-ui/2.15.2/spa-ui-2.15.2.pulsar
 spaui-endorsed=spa-ui/2.15.0/spa-ui-endorsed-2.15.0.pulsar
