--- a/pulsar/spa-ui-latest2-latest.properties
+++ b/pulsar/spa-ui-latest2-latest.properties
@@ -6,5 +6,5 @@ endorsed=core/4.14.0/pulsar-endorsed-4.14.0.pulsar
 docs=core/4.14.0/Pulsar 4.14.0 Documentation.pdf
 
 # Pulsar SPA-UI latest2 (may be updated to latest version at any time)
-spaui=spa-ui/2.15.3/spa-ui-2.15.3.pulsar
-spaui-endorsed=spa-ui/2.15.0/spa-ui-endorsed-2.15.0.pulsar
+spaui=spa-ui/latest2/spa-ui-2.15.4.165.250108-1945-develop.pulsar
+spaui-endorsed=spa-ui/latest2/spa-ui-endorsed-2.15.0.165.250108-1945-develop.pulsar
