--- a/pulsar/spa-ui-latest2-latest.properties
+++ b/pulsar/spa-ui-latest2-latest.properties
@@ -1,10 +1,10 @@
 # Pulsar Core latest (may be updated to latest version at any time)
 launcher=core/4.12.0/pulsar.launcher-4.2.7.jar
-modules=core/latest/pulsar-modules-4.14.6.41.250326-1716-develop.pulsar
-apps=core/latest/pulsar-apps-4.14.6.41.250326-1716-develop.pulsar
+modules=core/latest/pulsar-modules-4.14.6.42.250327-1240-develop.pulsar
+apps=core/latest/pulsar-apps-4.14.6.42.250327-1240-develop.pulsar
 endorsed=core/4.14.0/pulsar-endorsed-4.14.0.pulsar
 docs=core/4.14.0/Pulsar 4.14.0 Documentation.pdf
 
 # Pulsar SPA-UI latest2 (may be updated to latest version at any time)
-spaui=spa-ui/latest2/spa-ui-2.15.5.173.250501-0815-develop.pulsar
-spaui-endorsed=spa-ui/latest2/spa-ui-endorsed-2.15.0.173.250501-0815-develop.pulsar
+spaui=spa-ui/latest2/spa-ui-2.15.6.175.250505-1712-develop
+spaui-endorsed=spa-ui/latest2/spa-ui-endorsed-2.15.0.175.250505-1712-develop.pulsar
