--- a/pulsar/spa-ui-2.16.0-4.16.0.properties
+++ b/pulsar/spa-ui-2.16.0-4.16.0.properties
@@ -5,6 +5,6 @@ apps=core/4.16.0/pulsar-apps-4.16.0.pulsar
 endorsed=core/4.14.0/pulsar-endorsed-4.14.0.pulsar
 docs=core/4.14.0/Pulsar 4.14.0 Documentation.pdf
 
-# Pulsar SPA-UI 2.16-0
+# Pulsar SPA-UI 2.16.0
 spaui=spa-ui/2.16.0/spa-ui-2.16.0.pulsar
 spaui-endorsed=spa-ui/2.16.0/spa-ui-endorsed-2.16.0.pulsar
