--- a/pulsar/spa-ui-latest-latest.properties
+++ b/pulsar/spa-ui-latest-latest.properties
@@ -6,5 +6,5 @@ endorsed=core/4.14.0/pulsar-endorsed-4.14.0.pulsar
 docs=core/4.14.0/Pulsar 4.14.0 Documentation.pdf
 
 # Pulsar SPA-UI latest (may be updated to latest version at any time)
-spaui=spa-ui/latest/spa-ui-2.17.0.206.251016-1115-develop.pulsar
-spaui-endorsed=spa-ui/latest/spa-ui-endorsed-2.17.0.206.251016-1115-develop.pulsar
+spaui=spa-ui/2.18.0/spa-ui-2.18.0.3-RC.pulsar
+spaui-endorsed=spa-ui/2.18.0/spa-ui-endorsed-2.18.0.3-RC.pulsar
