--- a/pulsar/spa-ui-latest2-latest.properties
+++ b/pulsar/spa-ui-latest2-latest.properties
@@ -2,7 +2,7 @@
 launcher=core/4.12.0/pulsar.launcher-4.2.7.jar
 modules=core/latest/pulsar-modules-4.17.0.52.260123-1423-develop.pulsar
 apps=core/latest/pulsar-apps-4.17.0.52.260123-1423-develop.pulsar
-endorsed=core/latest/pulsar-endorsed-4.17.0.pulsar
+endorsed=core/latest/pulsar-endorsed-4.17.0.260122-1829.pulsar
 docs=core/4.14.0/Pulsar 4.14.0 Documentation.pdf
 
 # Pulsar SPA-UI latest2 (may be updated to latest version at any time)
