--- a/pulsar/spa-ui-latest2-latest2.properties
+++ b/pulsar/spa-ui-latest2-latest2.properties
@@ -1,8 +1,8 @@
 # Pulsar Core latest (may be updated to latest version at any time)
 launcher=core/4.12.0/pulsar.launcher-4.2.7.jar
-modules=core/latest/pulsar-modules-4.16.0.47.250630-1606-develop.pulsar
-apps=core/latest/pulsar-apps-4.16.0.47.250630-1606-develop.pulsar
-endorsed=core/4.14.0/pulsar-endorsed-4.14.0.pulsar
+modules=core/latest/pulsar-modules-4.17.0.52.260123-1423-develop.pulsar
+apps=core/latest/pulsar-apps-4.17.0.52.260123-1423-develop.pulsar
+endorsed=core/latest/pulsar-endorsed-4.17.0.260122-1829.pulsar
 docs=core/4.14.0/Pulsar 4.14.0 Documentation.pdf
 
 # Pulsar SPA-UI latest2 (may be updated to latest version at any time)
