--- a/pulsar/spa-ui-latest2-latest2.properties
+++ b/pulsar/spa-ui-latest2-latest2.properties
@@ -1,5 +1,5 @@
 # Pulsar Core latest (may be updated to latest version at any time)
-launcher=core/4.12.0/pulsar.launcher-4.2.7.jar
+launcher=core/latest/pulsar.launcher-4.3.0.jar
 modules=core/latest/pulsar-modules-4.17.0.52.260123-1423-develop.pulsar
 apps=core/latest/pulsar-apps-4.17.0.52.260123-1423-develop.pulsar
 endorsed=core/latest/pulsar-endorsed-4.17.0.260122-1829.pulsar
