SPA-UI Latest2 build #239

--- a/pulsar/spa-ui-latest2-latest.properties
+++ b/pulsar/spa-ui-latest2-latest.properties
@@ -5,6 +5,6 @@ apps=core/latest/pulsar-apps-4.17.0.52.260123-1423-develop.pulsar
 endorsed=core/latest/pulsar-endorsed-4.17.0.260122-1829.pulsar
 docs=core/4.14.0/Pulsar 4.14.0 Documentation.pdf
 
-# Pulsar SPA-UI latest (may be updated to latest version at any time).
+# Pulsar SPA-UI latest (may be updated to latest version at any time)
 spaui=spa-ui/2.18.0/spa-ui-2.18.0.3-RC.pulsar
 spaui-endorsed=spa-ui/2.18.0/spa-ui-endorsed-2.18.0.3-RC.pulsar
